recursion.lessons.recursion.tree.Tree.scala.error
Tree:19: error: illegal start of simple expression
	return
        ^